--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,20 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oranges\n"
+      "RonnieColeman\n",
+      "innoR\n"
      ]
     }
    ],
    "source": [
-    "x = {'Physics':67}\n",
-    "print(x.get('Apples', 'Oranges'))"
+    "word = \"RonnieColeman\"\n",
+    "substring = word[4 ::-1]\n",
+    "print(word)\n",
+    "\n",
+    "print(substring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"babad\"\n",
+    "\n",
+    "print(len(word) // 2 )"
    ]
   },
   {
@@ -42,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
