more snippets + zAlgorithm

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,44 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RonnieColeman\n",
-      "innoR\n"
+      "{1: 0}\n"
      ]
     }
    ],
    "source": [
-    "word = \"RonnieColeman\"\n",
-    "substring = word[4 ::-1]\n",
-    "print(word)\n",
+    "#x = {(1,2): \"apples\"}\n",
     "\n",
-    "print(substring)"
+    "x = dict()\n",
+    "x[1] = x.get(\"apple\", 0)\n",
+    "\n",
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "word = \"babad\"\n",
-    "\n",
-    "print(len(word) // 2 )"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
