--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,24 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 0}\n"
+      "amanaplanacanalpanama\n",
+      "False\n"
      ]
     }
    ],
    "source": [
-    "#x = {(1,2): \"apples\"}\n",
+    "example = \"A man, a plan, a canal: Panama\"\n",
+    "palindromeCheck = \"\"\n",
+    "for i in example:\n",
+    "    if i.isalnum():\n",
+    "        palindromeCheck += i\n",
     "\n",
-    "x = dict()\n",
-    "x[1] = x.get(\"apple\", 0)\n",
+    "palindromeCheck = palindromeCheck.lower()\n",
+    "palindromeCheckReverse = palindromeCheck[::-1]\n",
     "\n",
-    "print(x)"
+    "if palindromeCheck == palindromeCheckReverse:\n",
+    "    print(\"True\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"False\")"
    ]
   },
   {
